[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
source = [
    "jwt",
]

[tool.coverage.paths]
source = [
    "jwt",
    ".tox/*/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[project]
version = "2.4.0+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/pyjwt"
Repository = "https://github.com/lineaje-labs-gos/pyjwt"
Tracker = "https://github.com/lineaje-labs-gos/pyjwt/issues"
